--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:wZgcHarAA84EGRO2JJUyL2Gf/FHM1mwhTHH7e9OLTNo=
+APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost:8000
 
@@ -21,7 +21,7 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=haikal.web.id
+DB_HOST=localhost
 DB_PORT=3306
 DB_DATABASE=sistem_fakultas
 DB_USERNAME=sultan
