feat: implementasi fitur Surat Keterangan Tidak Menerima Beasiswa
- Add migration & model untuk Surat_Tidak_Beasiswa
- Add CRUD controller untuk mahasiswa & admin fakultas
- Add approval workflow untuk dekan dengan QR digital signature
- Fix QrCodeHelper: ganti Python script ke Endroid/QrCode library
- Add views: form pengajuan, riwayat, admin list, dekan preview, PDF download
- Update routes & sidebar navigation
- Allow QR codes dalam .gitignore untuk testing
- Include sample QR codes & surat pernyataan PDFs

--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,8 @@
 /node_modules
 /public/build
 /public/hot
-/public/storage
+/public/storage/*
+!/public/storage/qr-codes
 /storage/*.key
 /storage/pail
 /vendor
